--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"SERVERPLAYZ6vCr.aternos.me",
-	"port": "YOUR_ATERNOS_SERVER_PORT",
+	"ip":"game4.falix.cc",
+	"port": "38159",
 	"name": "afk_bot"
 }
 
